# gerador_de_texto_projeto_itec

./: .gitignore  README.md  crew.py  pyproject.toml  run.py  teste.ipynb
itec/: __init__.py  crew.py  forms.py  guardrails.py  pydantic.py  routes.py  tool.py
itec/templates/: home.html
